--- a/runtime/web/js-canvas/index.html
+++ b/runtime/web/js-canvas/index.html
@@ -11,7 +11,7 @@
     <canvas id="canvas" width="512" height="512" style="background-color: black;"></canvas>
 
     <script>
-        start();
+        vectron_start();
     </script>
 </body>
 </html>
